[gd_scene load_steps=9 format=2]

[ext_resource path="res://Resources/theme.tres" type="Theme" id=1]
[ext_resource path="res://Scenes/Game-Scenes/SettingsScene.gd" type="Script" id=2]
[ext_resource path="res://Resources/Spriteframes/background_spriteframes.tres" type="SpriteFrames" id=3]
[ext_resource path="res://Resources/upheavtt.ttf" type="DynamicFontData" id=4]

[sub_resource type="DynamicFont" id=1]
size = 80
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=2]
size = 40
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=3]
size = 40
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=4]
size = 20
font_data = ExtResource( 4 )

[node name="SettingsScreen" type="Control"]
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 400, 400 )
scale = Vector2( 8, 8 )
frames = ExtResource( 3 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
use_parent_material = true
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 800.0
margin_bottom = 800.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel" type="RichTextLabel" parent="VBoxContainer"]
margin_right = 800.0
margin_bottom = 200.0
rect_min_size = Vector2( 800, 200 )
custom_fonts/normal_font = SubResource( 1 )
bbcode_enabled = true
bbcode_text = "
[center] Settings [/center]"
text = "
 Settings "

[node name="Difficulty" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 204.0
margin_right = 800.0
margin_bottom = 304.0
alignment = 1

[node name="RichTextLabel" type="RichTextLabel" parent="VBoxContainer/Difficulty"]
margin_left = 98.0
margin_right = 398.0
margin_bottom = 100.0
rect_min_size = Vector2( 300, 100 )
custom_fonts/normal_font = SubResource( 2 )
bbcode_enabled = true
bbcode_text = "[center] Difficulty [/center]"
text = " Difficulty "

[node name="DifficultyButtons" type="HBoxContainer" parent="VBoxContainer/Difficulty"]
margin_left = 402.0
margin_right = 702.0
margin_bottom = 50.0
rect_min_size = Vector2( 300, 50 )
size_flags_vertical = 0
custom_constants/separation = 30
alignment = 1

[node name="D1" type="Button" parent="VBoxContainer/Difficulty/DifficultyButtons"]
margin_left = 45.0
margin_right = 95.0
margin_bottom = 50.0
rect_min_size = Vector2( 50, 50 )
theme = ExtResource( 1 )
toggle_mode = true

[node name="Label" type="Label" parent="VBoxContainer/Difficulty/DifficultyButtons/D1"]
margin_right = 52.0
margin_bottom = 50.0
theme = ExtResource( 1 )
custom_colors/font_color = Color( 0.0352941, 0.027451, 0.462745, 1 )
custom_fonts/font = SubResource( 3 )
text = "1"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="D2" type="Button" parent="VBoxContainer/Difficulty/DifficultyButtons"]
margin_left = 125.0
margin_right = 175.0
margin_bottom = 50.0
rect_min_size = Vector2( 50, 50 )
theme = ExtResource( 1 )
toggle_mode = true

[node name="Label" type="Label" parent="VBoxContainer/Difficulty/DifficultyButtons/D2"]
margin_left = 1.0
margin_right = 53.0
margin_bottom = 50.0
theme = ExtResource( 1 )
custom_colors/font_color = Color( 0.0352941, 0.027451, 0.462745, 1 )
custom_fonts/font = SubResource( 3 )
text = "2"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="D3" type="Button" parent="VBoxContainer/Difficulty/DifficultyButtons"]
margin_left = 205.0
margin_right = 255.0
margin_bottom = 50.0
rect_min_size = Vector2( 50, 50 )
theme = ExtResource( 1 )
toggle_mode = true

[node name="Label" type="Label" parent="VBoxContainer/Difficulty/DifficultyButtons/D3"]
margin_left = 1.0
margin_right = 53.0
margin_bottom = 50.0
theme = ExtResource( 1 )
custom_colors/font_color = Color( 0.0352941, 0.027451, 0.462745, 1 )
custom_fonts/font = SubResource( 3 )
text = "3"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Music" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 308.0
margin_right = 800.0
margin_bottom = 408.0
alignment = 1

[node name="RichTextLabel" type="RichTextLabel" parent="VBoxContainer/Music"]
margin_left = 98.0
margin_right = 398.0
margin_bottom = 100.0
rect_min_size = Vector2( 300, 100 )
custom_fonts/normal_font = SubResource( 2 )
bbcode_enabled = true
bbcode_text = "[center] Music [/center]"
text = " Music "

[node name="HScrollBar" type="HScrollBar" parent="VBoxContainer/Music"]
margin_left = 402.0
margin_right = 702.0
margin_bottom = 50.0
rect_min_size = Vector2( 300, 50 )
theme = ExtResource( 1 )
step = 1.0
page = 10.0
value = 50.0

[node name="SFX" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 412.0
margin_right = 800.0
margin_bottom = 512.0
alignment = 1

[node name="RichTextLabel" type="RichTextLabel" parent="VBoxContainer/SFX"]
margin_left = 98.0
margin_right = 398.0
margin_bottom = 100.0
rect_min_size = Vector2( 300, 100 )
custom_fonts/normal_font = SubResource( 2 )
bbcode_enabled = true
bbcode_text = "[center] SFX [/center]"
text = " SFX "

[node name="HScrollBar" type="HScrollBar" parent="VBoxContainer/SFX"]
margin_left = 402.0
margin_right = 702.0
margin_bottom = 50.0
rect_min_size = Vector2( 300, 50 )
theme = ExtResource( 1 )
step = 1.0
page = 10.0
value = 50.0

[node name="HelperText" type="RichTextLabel" parent="."]
margin_top = 648.0
margin_right = 800.0
margin_bottom = 799.0
rect_min_size = Vector2( 800, 50 )
theme = ExtResource( 1 )
custom_fonts/normal_font = SubResource( 4 )
text = "	Controls:
	- WASD / arrow keys to move
	- space to shoot
	- shift for special attack
	- j to consume item

	Press any key to return"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="gui_input" from="." to="." method="_on_event"]
[connection signal="gui_input" from="." to="." method="_on_SettingsScreen_gui_input"]
[connection signal="tree_entered" from="." to="." method="_on_SettingsScreen_tree_entered"]
[connection signal="tree_exiting" from="." to="." method="_on_SettingsScreen_tree_exiting"]
[connection signal="button_down" from="VBoxContainer/Difficulty/DifficultyButtons/D1" to="." method="_on_difficulty_changed" binds= [ "D1", "1" ]]
[connection signal="button_down" from="VBoxContainer/Difficulty/DifficultyButtons/D2" to="." method="_on_difficulty_changed" binds= [ "D2", 2 ]]
[connection signal="button_down" from="VBoxContainer/Difficulty/DifficultyButtons/D3" to="." method="_on_difficulty_changed" binds= [ "D3", 3 ]]
[connection signal="value_changed" from="VBoxContainer/Music/HScrollBar" to="." method="_on_audio_changed" binds= [ "music" ]]
[connection signal="value_changed" from="VBoxContainer/SFX/HScrollBar" to="." method="_on_audio_changed" binds= [ "SFX" ]]
